@@ -1,3 +1,5 @@
+- urpmi, gurpmi
+  o allow "retry" on aria2 download failure
 - urpmi
   o fix --auto-update ignoring --media and default-media (#45097)
 - gurpmi
